2000-06-11  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi (GNU/Linux): Added a caution about the
	"mem=" option.
	
2000-06-11  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (convert): When $host_os is linux*, use
	the expression 's%\([sh]d[a-z]\)[0-9]*$%\1%' instead of
	's%[0-9]*$%%', to get rid of the partition part. This fixes the
	bug "/dev/fd0" -> "/dev/fd". (But don't you think the naming is
	quite inconsistent with hard disks? Why not /dev/fd[a-z]?)
	Report by Pavel Roskin.
	
2000-06-08  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi (Network): The body is moved to ...
	(General usage of network support): ... this new section.
	(Diskless): New section.
	* docs/user-ref.texi (General commands): Added a description
	about the command "tftpserver".
	
2000-06-08  OKUJI Yoshinori  <okuji@gnu.org>

	* netboot/main.c (decode_rfc1533) [GRUB]: Eliminate trailing
	NULs in the NVT string for a configuration file name, if any.
	(decode_rfc1533): Likewise, if Extensions Path is present,
	eliminate the trailing NULs, if any.
	Also, check the length carefully to ensure that EXTPATH can fit
	in FNAME.
	
2000-06-06  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c: Added journaling to reiser.
	(reiserfs_journal_desc): new structure.
	(reiserfs_journal_commit): likewise.
 	(reiserfs_journal_header): likewise.
	(fsys_reiser_info): Added fields for journaling.
	(journal_read): new function.
	(journal_init) likewise.
	(block_read): New function to read reiserfs blocks, which reads
	from the journal if it contains newer versions. All relevant
	devread calls are replaced with calls to this method.
	(reiserfs_mount): Check for journaling super block and call
	journal_init.

2000-06-06  OKUJI Yoshinori  <okuji@gnu.org>

	* netboot/main.c (dhcprequest) [GRUB]: Set the length of the
	Parameter Request List to (4 + 2).
	Set the list to RFC1533_VENDOR_MAGIC and
	RFC1533_VENDOR_CONFIGFILE in addition to the standard
	parameters.